mano-cli/src/snapshots/mano__report__tests__snapshot_scan_error.snap
---
source: mano-cli/src/report.rs
expression: result
---
Error: Tá moscando, Brown?
   ╭─[ :1:7 ]
   │
 1 │ salve @
   │       ┬  
   │       ╰── E esse '@' aí, truta?
───╯
